# database

./: .gitignore  LICENSE  README.md
docs/component-docs/: README.md  SQL模板规范.md  pack.ps1  接入指南.md  测试说明.md  用法示例.md  目录索引.md
docs/design-docs/: Docker部署与SQL维护.md  README.md  使用文档.md  功能文档.md  接入文档.md  组件设计文档.md  维护文档.md  配置文档.md
dotnet/: database.sln  pack.ps1
dotnet/demos/Tyouqu.Database.Demo/: Program.cs  README.md  Tyouqu.Database.Demo.csproj
dotnet/src/Tyouqu.Database/: Tyouqu.Database.csproj
dotnet/src/Tyouqu.Database.Abstractions/: DatabaseOptions.cs  DatabaseProvider.cs  FullTableOperationInterceptor.cs  IDbConnectionFactory.cs  IDbExecutor.cs  ISqlDialect.cs  ISqlExecutionLogger.cs  ISqlInterceptor.cs  ISqlTemplateExecutor.cs  ISqlTemplateStore.cs  PageRequest.cs  PagedResult.cs  SqlExecutionContext.cs  SqlExecutionKind.cs  SqlExecutionLog.cs  SqlMultipleResult.cs  SqlSafetyAnalyzer.cs  SqlTemplateOptions.cs  Tyouqu.Database.Abstractions.csproj  TyouquDatabaseException.cs
dotnet/src/Tyouqu.Database.Dapper/: DapperDbExecutor.cs  DapperSqlTemplateExecutor.cs  FileSqlTemplateStore.cs  LoggingSqlExecutionLogger.cs  Tyouqu.Database.Dapper.csproj
dotnet/src/Tyouqu.Database.MySql/: MySqlConnectionFactory.cs  MySqlDialect.cs  Tyouqu.Database.MySql.csproj
java/: README.md  pom.xml
python/: README.md  pyproject.toml
python/src/tyouqu_database/: __init__.py  dialects.py  exceptions.py  executor.py  models.py  named_parameter_sql.py  pipeline.py  store.py
python/tests/: test_file_sql_template_store.py  test_named_parameter_sql.py  test_sqlite_executor.py
(+52 files in other folders)
